products/kube-prometheus-stack/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: svc-grafana-prefix
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /grafana
    forceSlash: true
